more contrast in overview subtitle (issue 141)

--- a/public/stylesheets/instances.css
+++ b/public/stylesheets/instances.css
@@ -1,6 +1,6 @@
 .subtitle{
 	font-size: .7em;
-	color: #999
+	color: #777;
 }
 
 #latest-users, #latest-incidents{
